[package]
name = "repl-rs"
version = "0.2.4"
authors = ["Jack Lund <jackl@geekheads.net>"]
description = "Library to generate a REPL for your application"
license = "MIT"
repository = "https://github.com/jacklund/repl-rs"
homepage = "https://github.com/jacklund/repl-rs"
readme = "README.md"
keywords = ["repl", "interpreter"]
categories = ["command-line-interface"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "8.2.0"
yansi = "0.5.0"
nix = "0.21.0"
clap = "2.33.1"
regex = "1.5.4"