[package]
name = "repl-rs"
version = "0.2.8"
authors = ["Jack Lund <jackl@geekheads.net>"]
description = "Library to generate a REPL for your application"
license = "MIT"
repository = "https://github.com/jacklund/repl-rs"
homepage = "https://github.com/jacklund/repl-rs"
readme = "README.md"
keywords = ["repl", "interpreter"]
categories = ["command-line-interface"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "8.2.0"
yansi = "0.5.0"
regex = "1.5.4"
rustyline-derive = "0.4.0"
clap = { version = "4.4.1", features = ["cargo"] }

[target.'cfg(unix)'.dev-dependencies]
nix = "0.21.0"
